# ai-mdc

./: .SUPER_IGNORE  .cursorignore  .gitignore  README.md  RETRO.md  SUPER_AUDIT.md  SUPER_DOCS.md  SUPER_TASK.md  WSL.md
gui/: pyproject.toml
gui/scripts/: linter.sh
gui/src/gui/: __init__.py
gui/src/gui/database/: base.py  crud.py  models.py
gui/src/gui/services/: ollama.py
gui/src/gui/utils/: time.py
gui/tests/: db_test.py  main.py  main_test.py  vectors.py
gui/tests/docs/: notes.md  reference.txt
helpers/: fix_bracketed_paste.sh
mcp-servers/: mcp.json
notes/: SCALARS.json  manifesto.md  meta-system.md  modular-go.md  system-arch-n-design.md
prompts/: shell_scripts.md
rules/: ai_cache.mdc  ai_knowledge_base.mdc  audit.mdc  bun.mdc  ceh.mdc  code_review.mdc  coder.mdc  coder_manifesto_v1.mdc  coder_manifesto_v2.mdc  coder_manifesto_v3.mdc  coder_v2.mdc  coder_v3.mdc  data_types.mdc  docs_writer_v1.mdc  docs_writer_v2.mdc  shell_script.mdc  software_architecture.mdc  testing.mdc  tracking.mdc  tracking_v2.mdc  uv.mdc
rules/domains/cursor/: mpc_tools.mdc
scripts/: docs_cleanup.sh
