[project]
name = "gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "chromadb>=1.0.8",
    "httpx>=0.28.1",
    "pymupdf>=1.25.5",
    "sqlalchemy>=2.0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
